@@ -1,3 +1,8 @@
+2003-07-30  Jonathan Wakely  <redi@gcc.gnu.org>
+
+	* docs/html/22_locale/howto.html: Use locale::classic() instead
+	of locale("C").
+
 2003-07-28  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* testsuite/testsuite_hooks.h: Remove list include.
